UI, small refactor and .env settings file

--- a/package.json
+++ b/package.json
@@ -1,44 +1,23 @@
 {
-  "name": "hyper-relay",
-  "version": "0.2.24",
-  "description": "TCP relay for hyperswarm (tunnel)",
-  "main": "main.js",
+  "name": "nexe",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node socks.js 1080 glitch"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@hyperswarm/dht": "next",
+    "dotenv": "^10.0.0",
     "hi-base32": "^0.5.1",
     "hypercore-crypto": "^2.3.0",
-    "pump": "^3.0.0",
-    "socksv5": "^0.0.6",
-    "ssh2": "^1.5.0"
+    "inquirer": "^8.2.0",
+    "prompt": "^1.2.0",
+    "prompt-choices": "^5.0.0",
+    "pump": "^3.0.0"
   },
-  "bin": {
-    "hyper-tcp-relay-client": "client.js",
-    "hyper-tcp-relay-server": "server.js",
-    "hyper-socks-relay-server": "socks.js",
-    "hyper-relay-client": "stdclient.js",
-    "hyper-relay-server": "stdserver.js"
-  },
-  "bugs": {
-    "url": "https://github.com/lanmower/hyper-relay/issues"
-  },
-  "bundleDependencies": false,
-  "deprecated": false,
-  "engines": {
-    "node": "12.x"
-  },
-  "homepage": "https://github.com/lanmower/hyper-relay#readme",
-  "keywords": [
-    "node",
-    "hyperswarm",
-    "tunnel",
-    "tcp",
-    "relay"
-  ],
-  "license": "MIT",
-  "repository": {
-    "url": "git+https://github.com/lanmower/hyper-relay.git"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
